@@ -435,7 +435,9 @@ typedef enum {
 	SQL_TO_DATE,
 	SQL_TO_CHAR,
 	SQL_CURRENT_TIMESTAMP,
-	SQL_REPLYCACHE_EXPIRE
+	SQL_REPLYCACHE_EXPIRE,
+	SQL_BINARY,
+	SQL_REGEXP
 } sql_fragment_t;
 
 
