@@ -46,6 +46,12 @@ const char * db_get_sql(sql_fragment_t frag)
 		case SQL_REPLYCACHE_EXPIRE:
 			return "NOW() - INTERVAL %d DAY";
 		break;
+		case SQL_BINARY:
+			return "BINARY";
+		break;
+		case SQL_REGEXP:
+			return "REGEXP";
+		break;
 	}
 	return NULL;
 }
